# udlang

./: .gitignore  Cargo.toml  HACKING.md  README.md  manual.md  roadmap.md
examples/: count.us  fact.us  function.us  hello.us  lists.us  loop.us  scopes.us  simple.us  subjunctive.us
scripts/: debugger.html  debugger.js  gmachine.py  gmachine.sh  heapviz.py  stackfolder.py
src/: ast.rs  env.rs  grammar.lalrpop  ir.rs  lib.rs  main.rs  parser.rs  typechecker.rs  vm.rs
