[package]
name = "udlang"
version = "0.1.0"
authors = ["brandon <dotsony@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.18.1"
ordered-float = "2.0"
serde-json = "1.0"


[build-dependencies.lalrpop]
features = ["lexer"]
version = "0.18.1"
